--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	</head>
 	<body>
 		<section class="main">
-		<nav></nav>
+		<nav>
+			
+		</nav>
 			<div class="container">
 				<h1></h1>
 				<h2></h2>
@@ -16,7 +18,7 @@
 			</div>
 		</section>
 
-
+		<section></section>
 
 		<section class="how-it-works">
 			
