--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
 		<meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+	    <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<section class="main">
 		<nav>
-			
+		<h1 class="hide">UXDO - Agencja UX Front-End</h1>
+		<ul>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
 		</nav>
 			<div class="container">
-				<h1></h1>
-				<h2></h2>
-				<a href="">Kontakt</a>
+				<h2>Outscoring UX</h2>
+				<h3>Wykorzystaj nasze umiejętności i zoptymalizuj koszty Twojego projektu</h3>
+				<a href="#">Zobacz jak działamy</a>
 				<img src="#" alt="#">
 			</div>
 		</section>
