--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			
 		</nav>
 			<div class="container">
-				<h1></h1>
+				<h1>Sten change</h1>
 				<h2></h2>
 				<a href="">Kontakt</a>
 				<img src="#" alt="#">
