--- a/index.html
+++ b/index.html
@@ -4,36 +4,34 @@
 		<meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-	    <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+		<link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700" rel="stylesheet">
+
+	    <link href="compas/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<section class="main">
-		<nav>
-		<h1 class="hide">UXDO - Agencja UX Front-End</h1>
-		<ul>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
-		</nav>
+			<nav>
+				<img src="#" alt="#" />
+				<ul>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</nav>
 			<div class="container">
-				<h2>Outscoring UX</h2>
-				<h3>Wykorzystaj nasze umiejętności i zoptymalizuj koszty Twojego projektu</h3>
-				<a href="#">Zobacz jak działamy</a>
-				<img src="#" alt="#">
+				<h1>Outscoring UX</h1>
+				<h2>Wykorzystaj nasze umiejętności i zoptymalizuj koszty Twojego projektu</h2>
+				<a href="#">Zobacz jak pracujemy</a>
+					
+				<a href="#"><img src="compas/gfx/arrow.png" alt="przejdź dalej" /></a>
 			</div>
 		</section>
 
-		<section></section>
-
 		<section class="how-it-works">
 			
-
+		<p style="color: black;"> abaababab ababamaba </p>
 		</section>
-
-
-		<section class="main how-it-works hide"></section>
 	</body>
 </html>
 
