--- a/index.html
+++ b/index.html
@@ -5,25 +5,23 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 		<link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700" rel="stylesheet">
-
 	    <link href="compas/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<section class="main">
 			<nav>
-				<img src="#" alt="#" />
+				<img src="compas/gfx/logo.png" alt="uxdo logo" />
 				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li><a href="#">Kontakt</a></li>
+					<li><a href="#">Realizacje</a></li>
+					<li><a href="#">Jak pracujemy</a></li>
+					<li><a href="#">Home</a></li>
 				</ul>
 			</nav>
 			<div class="container">
 				<h1>Outscoring UX</h1>
 				<h2>Wykorzystaj nasze umiejętności i zoptymalizuj koszty Twojego projektu</h2>
-				<a href="#">Zobacz jak pracujemy</a>
-					
+				<a href="#">Zobacz jak pracujemy</a>	
 				<a href="#"><img src="compas/gfx/arrow.png" alt="przejdź dalej" /></a>
 			</div>
 		</section>
