--- a/index.html
+++ b/index.html
@@ -10,26 +10,38 @@
 	<body>
 		<section class="main">
 			<nav>
-				<img src="compas/gfx/logo.png" alt="uxdo logo" />
+				<a href="#"><img src="compas/gfx/logo.png" alt="uxdo logo" /></a>
 				<ul>
-					<li><a href="#">Kontakt</a></li>
-					<li><a href="#">Realizacje</a></li>
+					<li class="active"><a href="#">Home</a></li>
 					<li><a href="#">Jak pracujemy</a></li>
-					<li><a href="#">Home</a></li>
+					<li><a href="#">Realizacje</a></li>
+					<li><a href="#">Kontakt</a></li>
 				</ul>
 			</nav>
 			<div class="container">
-				<h1>Outscoring UX</h1>
-				<h2>Wykorzystaj nasze umiejętności i zoptymalizuj koszty Twojego projektu</h2>
-				<a href="#">Zobacz jak pracujemy</a>	
-				<a href="#"><img src="compas/gfx/arrow.png" alt="przejdź dalej" /></a>
+				<h1>Outsourcing UX</h1>
+				<h2>Użyj naszych umiejętności i zoptymalizuj koszty Twojego projektu.  zoptymalizuj koszty Twojego projektu</h2>
+				<a class="main-button" href="#">Zobacz jak pracujemy</a>	
 			</div>
+
+			<a href="#" class="scroll-button"><img src="compas/gfx/arrow.png" alt="przejdź dalej" /></a>
+
 		</section>
 
 		<section class="how-it-works">
-			
-		<p style="color: black;"> abaababab ababamaba </p>
+			<div class="proces-text">
+				
+			</div>
+
+			<div class="proces-wrapper">
+				
+
+			</div>
+
+
 		</section>
+
+
 	</body>
 </html>
 
