--- a/index.html
+++ b/index.html
@@ -47,33 +47,33 @@
 				<ul class="flex-container">
 				  <li class="flex-item">
 				  	<span></span>
-				  	<h4></h4>
-				  	<p></p>
+				  	<h4>RESEARCH</h4>
+				  	<p>analiza w celu zrozumienia realnych potrzeb użytkowników</p>
 				  </li>
 				  <li class="flex-item">
 				  	<span></span>
-				  	<h4></h4>
-				  	<p></p>
+				  	<h4>MAKIETOWANIE</h4>
+				  	<p>tworzenie wysokiej jakości prototypów aplikacji</p>
 				  </li>
 				  <li class="flex-item">
 				  	<span></span>
-				  	<h4></h4>
-				  	<p></p>				  	
+				  	<h4>CONTENT</h4>
+				  	<p>tworzenie treści dostosowanych do potrzeb grupy docelowej</p>	
+			 	  </li>
+				  <li class="flex-item">
+				  	<span></span>
+				  	<h4>DESIGN</h4>
+				  	<p>koncepcja i projekt identyfikacji wizualnej marki</p>
 				  </li>
 				  <li class="flex-item">
 				  	<span></span>
-				  	<h4></h4>
-				  	<p></p>				  	
+				  	<h4>FRONT-END</h4>
+				  	<p>wykorzystanie technologii zgodnej z obowiązującymi standardami</p>			  	
 				  </li>
 				  <li class="flex-item">
 				  	<span></span>
-				  	<h4></h4>
-				  	<p></p>				  	
-				  </li>
-				  <li class="flex-item">
-				  	<span></span>
-				  	<h4></h4>
-				  	<p></p>				  	
+				  	<h4>OPTYMALIZACJA</h4>
+				  	<p>wykorzystanie technologii zgodnej z obowiązującymi standardami</p>				  	
 				  </li>
 				</ul>	
 
