--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-		<link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Comfortaa:100, 300,400,700" rel="stylesheet">
 	    <link href="compas/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
@@ -19,7 +19,7 @@
 				</ul>
 			</nav>
 			<div class="container">
-				<h1>Outsourcing UX</h1>
+				<h1>We outsource UX</h1>
 				<h2>Użyj naszych umiejętności i zoptymalizuj koszty Twojego projektu.  zoptymalizuj koszty Twojego projektu</h2>
 				<a class="main-button" href="#">Zobacz jak pracujemy</a>	
 			</div>
@@ -38,9 +38,8 @@
 
 					
 					Vivamus vitae nisi erat. Fusce ultrices id sapien at vehicula. Donec eu mi vitae ligula pharetra tempus. Quisque malesuada odio ac mi aliquet, vel porttitor leo dictum. Fusce non justo at eros auctor scelerisque. <br/><br/>
-
-					Pellentesque semper placerat posuere. Sed varius nisl in sapien pretium, sit amet ultricies metus efficitur. 
 					</p>
+					<a href="#" class="contact-with-us">Skontaktuj się</a>
 				</div>
 
 				<div class="proces-wrapper">
@@ -52,7 +51,7 @@
 				  </li>
 				  <li class="flex-item">
 				  	<span></span>
-				  	<h4>MAKIETOWANIE</h4>
+				  	<h4>PROTOTYPE</h4>
 				  	<p>tworzenie wysokiej jakości prototypów aplikacji</p>
 				  </li>
 				  <li class="flex-item">
@@ -72,7 +71,7 @@
 				  </li>
 				  <li class="flex-item">
 				  	<span></span>
-				  	<h4>OPTYMALIZACJA</h4>
+				  	<h4>OPTIMIZATION</h4>
 				  	<p>wykorzystanie technologii zgodnej z obowiązującymi standardami</p>				  	
 				  </li>
 				</ul>	
