--- a/index.html
+++ b/index.html
@@ -80,6 +80,38 @@
 			</div>
 		</section>
 
+		<section class="portfolio">
+			<h3>Realizacje</h3>
+
+			<div class="row_1">
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			</div>
+
+			<div class="row_2">
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			</div>
+
+			<div class="row_3">
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			</div>
+
+			<div class="row_4">
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			</div>
+
+		</section>
 
 	</body>
 </html>
