--- a/index.html
+++ b/index.html
@@ -84,35 +84,54 @@
 			<h3>Realizacje</h3>
 
 			<div class="row_1">
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			<h4>Sektor Bankowy</h4>
+				<ul>
+					<li><span></span></li>
+					<li><span></span></li>
+					<li><span></span></li>
+					<li><span></span></li>
+				</ul>
 			</div>
 
 			<div class="row_2">
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			<h4>Agencje</h4>
+				<ul>
+					<li><span></span></li>
+					<li><span></span></li>
+					<li><span></span></li>
+					<li><span></span></li>
+				</ul>
 			</div>
 
 			<div class="row_3">
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
-			</div>
-
-			<div class="row_4">
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
-			<div><img src="compas/gfx/logo.png" alt="logo"></div>
+			<h4>Biznes</h4>
+			<ul>
+					<li><span></span></li>
+					<li><span></span></li>
+					<li><span></span></li>
+					<li><span></span></li>
+					<li><span></span></li>
+					<li><span></span></li>
+					<li><span></span></li>
+					<li><span></span></li>			
+			</ul>
 			</div>
 
 		</section>
 
+		<aside id="kontakt">
+	        <div class="kontakt-inner" id="kontakt-inner">
+	           <a class="close" href="#" onClick="hidePopup(event);"><img src="gfx/close.png" alt="close"></a>
+	           <div class="form-inner-content">
+	                <h3>Skontaktuj się z nami:</h3>
+	                <img src="gfx/pobierz_eInformator.jpg" alt="graficzka">
+	                <form name="kontakt" id="form-popup">
+	                    
+	                </form>
+	            </div>
+	        </div>    
+   		</aside>
+	<script src="js/custom.js"></script>
 	</body>
 </html>
 
