--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 		<link href="https://fonts.googleapis.com/css?family=Comfortaa:100, 300,400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin-ext" rel="stylesheet">
 	    <link href="compas/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
@@ -23,9 +24,6 @@
 				<h2>Użyj naszych umiejętności i zoptymalizuj koszty Twojego projektu.  zoptymalizuj koszty Twojego projektu</h2>
 				<a class="main-button" href="#">Zobacz jak pracujemy</a>	
 			</div>
-
-			<a href="#" class="scroll-button"><img src="compas/gfx/arrow.png" alt="przejdź dalej" /></a>
-
 		</section>
 		<div class="clear"></div>
 		<section class="how-it-works">
@@ -39,7 +37,7 @@
 					
 					Vivamus vitae nisi erat. Fusce ultrices id sapien at vehicula. Donec eu mi vitae ligula pharetra tempus. Quisque malesuada odio ac mi aliquet, vel porttitor leo dictum. Fusce non justo at eros auctor scelerisque. <br/><br/>
 					</p>
-					<a href="#" class="contact-with-us">Skontaktuj się</a>
+					<a href="#" class="contact-with-us">skontaktuj się</a>
 				</div>
 
 				<div class="proces-wrapper">
@@ -82,10 +80,11 @@
 
 		<section class="portfolio">
 			<h3>Realizacje</h3>
-
-			<div class="row_1">
-			<h4>Sektor Bankowy</h4>
-				<ul>
+			
+			<div class="row">
+			<h4 class="row_1">Sektor Bankowy</h4>
+				<ul class="row_1"
+				>
 					<li><span></span></li>
 					<li><span></span></li>
 					<li><span></span></li>
@@ -93,9 +92,9 @@
 				</ul>
 			</div>
 
-			<div class="row_2">
-			<h4>Agencje</h4>
-				<ul>
+			<div class="row">
+			<h4 class="row_2">Agencje</h4>
+				<ul class="row_2">
 					<li><span></span></li>
 					<li><span></span></li>
 					<li><span></span></li>
@@ -103,25 +102,32 @@
 				</ul>
 			</div>
 
-			<div class="row_3">
-			<h4>Biznes</h4>
-			<ul>
+			<div class="row">
+			<h4 class="row_3">Biznes</h4>
+			<ul class="row_3">
 					<li><span></span></li>
 					<li><span></span></li>
 					<li><span></span></li>
-					<li><span></span></li>
-					<li><span></span></li>
-					<li><span></span></li>
-					<li><span></span></li>
-					<li><span></span></li>			
+					<li><span></span></li>		
 			</ul>
 			</div>
 
+
+
 		</section>
+		<div class="clear"></div>
+		
+		<div class="fix-wrapper">
+		<section class="team">
+			<h3>mamy zespół do zadań specjalnych</h3>
+			<p>zaangażuj nas do swojego projektu</p>
+			<a class="main-button" href="#">skontaktuj się</a>
+		</section>
+		</div>
 
 		<aside id="kontakt">
 	        <div class="kontakt-inner" id="kontakt-inner">
-	           <a class="close" href="#" onClick="hidePopup(event);"><img src="gfx/close.png" alt="close"></a>
+	           <a class="close" href="#" onClick="hidePopup(event);"><img src="compas/gfx/close.png" alt="close"></a>
 	           <div class="form-inner-content">
 	                <h3>Skontaktuj się z nami:</h3>
 	                <img src="gfx/pobierz_eInformator.jpg" alt="graficzka">
